Fix readability of bootstrap css

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /********** Template CSS **********/
 :root {
-    --primary: #6244C5;
-    --secondary: #FFC448;
+    --primary: #937376;
+    --secondary: #B17D72;
     --light: #FAFAFB;
     --dark: #12141D;
 }
